Rebrand and add docs, LICENSE, CI/CD for v1 launch
Rewrite README with problem-first positioning (context pollution),
CLI-first structure, and links to full docs site. Add MIT LICENSE,
CONTRIBUTING.md, and 7 docs pages (getting-started, cli-reference,
configuration, how-it-works, conditional-skills, comparison, faq).

Add GitHub Actions workflows for npm publishing on tags and Starlight
docs deployment to GitHub Pages. Bump version to 0.1.1, update
package.json description to match new tagline.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ai-skills-sync",
-  "version": "1.0.0",
+  "version": "0.1.1",
   "type": "module",
-  "description": "Per-project AI skill routing for coding agents",
+  "description": "AI skills that activate based on your project, so your agent's context goes to what matters",
   "bin": {
     "ai-skills-sync": "dist/cli.js"
   },
