--- a/package.json
+++ b/package.json
@@ -25,8 +25,17 @@
     "env-paths": "^4.0.0",
     "execa": "^9.6.1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/peteretelej/ai-skills-sync.git"
+  },
+  "publishConfig": {
+    "provenance": true,
+    "access": "public"
+  },
   "devDependencies": {
     "@types/node": "^25.2.2",
+    "@vitest/coverage-v8": "^4.0.18",
     "tsup": "^8.5.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
