--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ai-skills-sync",
-  "version": "0.1.1",
+  "version": "0.1.2",
+  "license": "MIT",
   "type": "module",
   "description": "AI skills that activate based on your project, so your agent's context goes to what matters",
   "bin": {
